[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helmgen"
version = "0.1.0"
description = "Auto-generate Helm charts from Docker Compose files"
authors = [
  { name = "Marcelo Garcia", email = "marcelo.garcia@linux.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0.2",
  "ruamel.yaml>=0.18.6",
  "jinja2>=3.1.4",
  "click>=8.1.7",
  "rich>=13.7.1",
]

[project.urls]
homepage = "https://github.com/marcelodevops/helmgen"
repository = "https://github.com/marcelodevops/helmgen"
issues = "https://github.com/marcelodevops/helmgen/issues"

[project.scripts]
helmgen = "helmgen.generator:main"

[tool.setuptools]
include-package-data = true

[tool.semantic_release]
version_variable = "helmgen/__init__.py:__version__"
branch = "main"
upload_to_pypi = true
build_command = "python -m build"
commit_author = "semantic-release <actions@github.com>"
changelog_file = "CHANGELOG.md"
